gitignore: tests and docs

--- a/lab-main/.gitignore
+++ b/lab-main/.gitignore
@@ -170,19 +170,12 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# Tests
+# Documentation
+_build
+docs/pdoc
+docs/site
 
-test/
-tests/
-spec/
-specs/
-integration-tests/
-e2e-tests/
-test_*.py
-*_test.py
-*.spec.js
-*.test.js
-coverage/
-*.xml
-*.test.config
-test_config.json
+# Test results
+.coverage
+*.log
+.pytest_cache
